[package]
name = "openfang-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent runtime and execution environment for OpenFang"

[features]
default = ["ainl-persona-evolution", "ainl-extractor"]
ainl-persona-evolution = ["dep:ainl-persona"]
ainl-tagger = ["dep:ainl-semantic-tagger"]
ainl-extractor = ["dep:ainl-graph-extractor"]
ainl-runtime-engine = ["dep:ainl-runtime"]

[dependencies]
openfang-types = { path = "../openfang-types" }
openfang-memory = { path = "../openfang-memory" }
openfang-skills = { path = "../openfang-skills" }
ainl-memory = { path = "../ainl-memory", version = "0.1.8-alpha" }
ainl-semantic-tagger = { path = "../ainl-semantic-tagger", version = "0.1.5", optional = true }
ainl-graph-extractor = { path = "../ainl-graph-extractor", version = "0.1.5", optional = true }
ainl-persona = { path = "../ainl-persona", version = "0.1.4", optional = true }
# Workspace path keeps `ainl-memory` / `ainl-persona` in sync with `openfang-runtime` (crates.io
# `ainl-runtime` alone would pull registry copies and fail to type-check). Version aligns with crates.io.
ainl-runtime = { path = "../ainl-runtime", version = "0.3.5-alpha", optional = true, features = ["async"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
tokio-stream = { workspace = true }
wasmtime = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
dashmap = { workspace = true }
regex-lite = { workspace = true }
regex = "1"
rusqlite = { workspace = true }
rmcp = { workspace = true }
dirs = { workspace = true }
http = "1"
tokio-tungstenite = "0.24"
shlex = "1"
calamine = "0.34.0"
pdf-extract = "0.10.0"
rust_xlsxwriter = "0.94.0"
zip = { workspace = true }
lru = "0.12"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
