[package]
name = "openfang-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent runtime and execution environment for OpenFang"

[features]
default = ["ainl-persona-evolution", "ainl-extractor", "ainl-tagger", "ainl-runtime-engine"]
ainl-persona-evolution = ["dep:ainl-persona"]
ainl-tagger = ["dep:ainl-semantic-tagger"]
ainl-extractor = ["dep:ainl-graph-extractor"]
ainl-runtime-engine = ["dep:ainl-runtime"]

[dependencies]
openfang-types = { path = "../openfang-types" }
openfang-memory = { path = "../openfang-memory" }
openfang-skills = { path = "../openfang-skills" }
ainl-compression = { path = "../ainl-compression", version = "0.1.0-alpha" }
ainl-memory = { path = "../ainl-memory", version = "0.1.9-alpha" }
ainl-agent-snapshot = { path = "../ainl-agent-snapshot" }
ainl-contracts = { path = "../ainl-contracts" }
ainl-repo-intel = { path = "../ainl-repo-intel" }
ainl-context-freshness = { path = "../ainl-context-freshness" }
ainl-impact-policy = { path = "../ainl-impact-policy" }
armara-provider-api = { path = "../../../ainl-inference-server/crates/armara-provider-api" }
ainl-semantic-tagger = { path = "../ainl-semantic-tagger", version = "0.1.6", optional = true }
ainl-graph-extractor = { path = "../ainl-graph-extractor", version = "0.1.6", optional = true }
ainl-persona = { path = "../ainl-persona", version = "0.1.6", optional = true }
# Workspace path keeps `ainl-memory` / `ainl-persona` in sync with `openfang-runtime` (crates.io
# `ainl-runtime` alone would pull registry copies and fail to type-check). Version aligns with crates.io.
ainl-runtime = { path = "../ainl-runtime", version = "0.3.7-alpha", optional = true, features = ["async"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
flate2 = "1"
tar = "0.4"
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
tokio-stream = { workspace = true }
wasmtime = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
dashmap = { workspace = true }
regex-lite = { workspace = true }
regex = "1"
rusqlite = { workspace = true }
rmcp = { workspace = true }
dirs = { workspace = true }
http = "1"
tokio-tungstenite = "0.24"
shlex = "1"
calamine = "0.34.0"
pdf-extract = "0.10.0"
rust_xlsxwriter = "0.94.0"
zip = { workspace = true }
lru = "0.12"
jsonschema = "0.28"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
